Fixing some oveoverflow

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -27,6 +27,7 @@ body{
 
 $card-height: 430px;
 $card-img-height: 320px;
+$card-body-height: 110px;
 $large-and-up: 993px;
 
 .cusd-logo{
@@ -49,13 +50,47 @@ $large-and-up: 993px;
    -webkit-transition: box-shadow 0.2s ease-in, -webkit-transform 0.2s ease-in;
    transition: box-shadow 0.2s ease-in, transform 0.2s ease-in;
    color:black;
+   overflow: hidden;
+   font-weight: lighter;
+
    .card-title{
      font-weight: bold;
      font-size: 1.35rem;
    }
-   .card-description{
-     font-weight: lighter;
-   }
+}
+
+@media only screen and (max-width: 400px) {
+    /* For mobile phones: */
+    .card-bg{
+      font-size: 0.9rem;
+      .card-title{
+        font-weight: bold;
+        font-size: 1.1rem;
+      }
+      .card-description{
+        font-size: 0.9rem;
+        height: 55px;
+      }
+    }
+}
+
+@media only screen and (max-width: 1150px) and (min-width: 994px) {
+
+    .card-bg{
+      font-size: 0.9rem;
+      .card-title{
+        font-weight: bold;
+        font-size: 1.1rem;
+      }
+      .card-description{
+        font-size: 0.9rem;
+        height: 55px;
+        display: -webkit-box;
+        -webkit-line-clamp: 3;
+        -webkit-box-orient: vertical;
+      }
+
+    }
 }
 
 // looks a bit better with the offset
@@ -90,6 +125,7 @@ nav{
 }
 .about-tag{
   text-align: center;
+  font-weight: bold;
   width: 50%;
   padding: 0.5rem !important;
   float: left;
@@ -99,6 +135,7 @@ nav{
 
 .type-tag{
   text-align: center;
+  font-weight: bold;
   width: 50%;
   padding: 0.5rem !important;
   float: right;
@@ -116,6 +153,7 @@ nav{
 
 .card-body{
   position: relative;
+  height: $card-body-height;
   padding: 1.2rem;
 }
 
@@ -126,9 +164,12 @@ nav{
 }
 
 .card-description{
-  font-size: small;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  height: 45px;
+  overflow: hidden;
 }
-
 .row {
   padding-left:1.0rem;
   padding-right:1.0rem;
